// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateField> tests <DateField> - rendering - disabled 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'Birthday'}
      isRequired={true}
    >
      <Flex
    direction={{ default: 'column' }}
    id={'id'}
  >
    <FlexItem>
      <InputGroup style={{ background: 'transparent' }}>
        <DatePicker
          id={'date-picker-id'}
          isDisabled={true}
          name={'birthday'}
          onChange={newDate => onDateChange(newDate, set__birthday,  birthday)}
          value={parseDate(birthday)}
        />
        <TimePicker
          id={'time-picker-id'}
          isDisabled={true}
          name={'birthday'}
          onChange={(time, hours?, minutes?) => onTimeChange(time, set__birthday, birthday, hours, minutes)}
          style={{ width: '120px' }}
          time={parseTime(birthday)}
        />
      </InputGroup>
    </FlexItem>
  </Flex>
    </FormGroup>"
`;

exports[`<DateField> tests <DateField> - rendering 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'Birthday'}
      isRequired={true}
    >
      <Flex
    direction={{ default: 'column' }}
    id={'id'}
  >
    <FlexItem>
      <InputGroup style={{ background: 'transparent' }}>
        <DatePicker
          id={'date-picker-id'}
          isDisabled={false}
          name={'birthday'}
          onChange={newDate => onDateChange(newDate, set__birthday,  birthday)}
          value={parseDate(birthday)}
        />
        <TimePicker
          id={'time-picker-id'}
          isDisabled={false}
          name={'birthday'}
          onChange={(time, hours?, minutes?) => onTimeChange(time, set__birthday, birthday, hours, minutes)}
          style={{ width: '120px' }}
          time={parseTime(birthday)}
        />
      </InputGroup>
    </FlexItem>
  </Flex>
    </FormGroup>"
`;
